# learning-ai-infra

./: AI_Infra.md  CLAUDE.md  NVIDIA_Hopper_Architecture_In_Depth.md  Windows环境配置手册.md  video.md
AI-Infra/: CLAUDE.md  README.md
AI-Infra/01-前置知识与硬件基础/: CPU内存与服务器运维.md  GPU硬件与Hopper架构.md  README.md
AI-Infra/02-CUDA编程与算子优化/: Checkpoint机制深度解析.md  LeetCUDA-CUDA学习与实践.md  README.md
AI-Infra/03-分布式训练/: DeepEP-专家并行通信库.md  DeepSpeed-分布式训练优化.md  Megatron-LM-大规模训练框架.md  NCCL-GPU通信基础.md  README.md  分布式系统理论基础.md
AI-Infra/03-分布式训练/DeepEP/: .gitignore  CMakeLists.txt  README.md  develop.sh  setup.py
AI-Infra/03-分布式训练/DeepEP/csrc/: python_api.cpp
AI-Infra/03-分布式训练/DeepEP/csrc/jit/: compiler.hpp  device_runtime.hpp  launch_runtime.hpp
AI-Infra/03-分布式训练/DeepEP/csrc/kernels/backend/: api.cuh  nccl.cu
AI-Infra/03-分布式训练/DeepEP/csrc/utils/: lazy_driver.hpp
AI-Infra/03-分布式训练/DeepEP/deep_ep/: __init__.py
AI-Infra/03-分布式训练/DeepEP/deep_ep/buffers/: elastic.py
AI-Infra/03-分布式训练/DeepEP/deep_ep/include/deep_ep/common/: comm.cuh  compiled.cuh  handle.cuh  layout.cuh  ptx.cuh
AI-Infra/03-分布式训练/DeepEP/deep_ep/include/deep_ep/impls/: barrier.cuh  dispatch.cuh  dispatch_copy_epilogue.cuh  hybrid_combine.cuh  hybrid_dispatch.cuh
AI-Infra/03-分布式训练/DeepEP/deep_ep/utils/: envs.py
AI-Infra/03-分布式训练/DeepEP/docs/: legacy.md  nvshmem.md
AI-Infra/03-分布式训练/DeepEP/tests/elastic/: test_ep.py
AI-Infra/03-分布式训练/DeepEP/tests/legacy/: test_internode.py  test_intranode.py  test_low_latency.py
AI-Infra/04-推理引擎与服务化/: README.md  SGLang-高性能推理框架.md  llamacpp-边缘推理引擎.md  vLLM-高效LLM推理服务.md  推理服务化架构与压测.md
AI-Infra/05-AI框架与编译器/: AI编译器深度专题.md  PyTorch-深度学习框架.md  README.md  Triton-算子编译器.md
AI-Infra/06-参考资料/: AI Infra学习路线.md  AI-Infra架构师知识体系.md  README.md  Windows环境配置手册.md  ai-infra-introduction.md  学习资源与视频.md  环境配置手册.md
AI-Infra/07-云原生与K8s调度/: AI集群资源调度架构.md  Kubernetes核心与AI扩展.md  README.md
AI-Infra/08-存储与高速网络/: AI存储体系.md  AI高速网络架构.md  README.md
AI-Infra/09-可观测与成本安全/: AI安全架构.md  README.md  可观测监控日志追踪.md  成本架构与资源治理.md
AI-Infra/10-平台化与架构设计/: AI-Infra全栈架构全景图.md  README.md  万卡级AI-Infra架构总图.md  大模型训练到部署完整流程.md  平台化架构设计.md  必学开源项目.md  核心定位与能力模型.md  生态扩展技术栈.md  编程语言与工具栈.md
AI-Infra/11-课程与实战项目/: CUDA编程与算子开发课程.md  README.md  (+4 more)
LeetCUDA/: .gitignore
(+88 files in other folders)
